Add refetch note when submit new note

--- a/client/app/src/notes.css
+++ b/client/app/src/notes.css
@@ -8,3 +8,13 @@
     width: 100%;
     resize: none;
 }
+
+.notes {
+    -webkit-column-count: 3;
+    -moz-column-count: 3;
+    column-count: 3;
+}
+
+.card-header, .card-content {
+    white-space: pre-line;
+}
